Fix margin on Safari (table columns modal).

--- a/src/components/TableSelectColumnsModal/index.less
+++ b/src/components/TableSelectColumnsModal/index.less
@@ -47,8 +47,14 @@
     .ant-tree-list {
       margin-top: 18px;
     }
+
     .ant-empty {
       margin-top: 40px;
     }
+
+    &.safari .ant-tree-list {
+      margin-top: 30px;
+    }
   }
+
 }
